@@ -38,3 +38,7 @@ CyberSource Gateway
 NetRegistry Gateway
 
 * Originally contributed by George Ogata (mailto: george.ogata@gmail.com)
+
+Viaklix Gateway
+
+* Originally contributed by Sal Scotto
